# naev-pm

./: .gitignore  LICENSE  README.md  development.md  pyproject.toml  requirements.txt
src/naevpm/: cli.py
src/naevpm/core/: abstract_thread_communication.py  application_logic.py  config.py  directories.py  git_utils.py  models.py  sqlite_database_connector.py
src/naevpm/core/plugin_workflows/: git_plugin_workflow.py  local_zip_plugin_workflow.py  plugin_workflow.py  plugin_workflow_manager.py  remote_zip_plugin_workflow.py
src/naevpm/gui/: abstract_gui_controller.py  add_registry_window.py  data_model_to_str_list.py  display_utils.py  error_window.py  gui_controller.py  naevpm_frame.py  plugins_frame.py  registries_frame.py  start.py  synced_tree_view.py  tk_gui.py  tk_iid_object_sync.py  tk_root.py  tk_threading.py  treeview_context_menu.py
src/naevpm/gui/resources/: icon2.xcf
tests/: test_plugin_workflows.py  test_sqlite_database_connector.py  test_tk_iid_object_sync.py
tests/gui/: test_tk_iid_object_sync.py
tests/test-resources/git-plugin-test/: plugin.xml  test.txt
